
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 int EXIT_FAILURE ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int exit (int ) ;
 int fatal (char*) ;
 int perror (char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

void shell(int fd)
{
 char buf[512];
 fd_set rfds;
 int l;

 write(fd, "id ; uname -a\n", 14);
 while (1) {
  FD_SET(0, &rfds);
  FD_SET(fd, &rfds);
  select(fd + 1, &rfds, ((void*)0), ((void*)0), ((void*)0));

  if (FD_ISSET(0, &rfds)) {
   l = read(0, buf, sizeof (buf));
   if (l <= 0) {
    perror("read user");
    exit(EXIT_FAILURE);
   }
   write(fd, buf, l);
  }

  if (FD_ISSET(fd, &rfds)) {
   l = read(fd, buf, sizeof (buf));
   if (l == 0) {
    fatal("connection closed by foreign host.\n");
   } else if (l < 0) {
    perror("read remote");
    exit (EXIT_FAILURE);
   }
   write(1, buf, l);
  }

 }
}
