; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_63.c_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_63.c_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"id ; uname -a\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"read user\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [36 x i8] c"connection closed by foreign host.\0A\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"read remote\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shell(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [512 x i8], align 16
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @write(i32 %6, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 14)
  br label %8

8:                                                ; preds = %1, %55
  %9 = call i32 @FD_SET(i32 0, i32* %4)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @FD_SET(i32 %10, i32* %4)
  %12 = load i32, i32* %2, align 4
  %13 = add nsw i32 %12, 1
  %14 = call i32 @select(i32 %13, i32* %4, i32* null, i32* null, i32* null)
  %15 = call i64 @FD_ISSET(i32 0, i32* %4)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %8
  %18 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %19 = call i32 @read(i32 0, i8* %18, i32 512)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp sle i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = call i32 @perror(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i32, i32* @EXIT_FAILURE, align 4
  %25 = call i32 @exit(i32 %24) #3
  unreachable

26:                                               ; preds = %17
  %27 = load i32, i32* %2, align 4
  %28 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @write(i32 %27, i8* %28, i32 %29)
  br label %31

31:                                               ; preds = %26, %8
  %32 = load i32, i32* %2, align 4
  %33 = call i64 @FD_ISSET(i32 %32, i32* %4)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %55

35:                                               ; preds = %31
  %36 = load i32, i32* %2, align 4
  %37 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %38 = call i32 @read(i32 %36, i8* %37, i32 512)
  store i32 %38, i32* %5, align 4
  %39 = load i32, i32* %5, align 4
  %40 = icmp eq i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %35
  %42 = call i32 @fatal(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0))
  br label %51

43:                                               ; preds = %35
  %44 = load i32, i32* %5, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %50

46:                                               ; preds = %43
  %47 = call i32 @perror(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0))
  %48 = load i32, i32* @EXIT_FAILURE, align 4
  %49 = call i32 @exit(i32 %48) #3
  unreachable

50:                                               ; preds = %43
  br label %51

51:                                               ; preds = %50, %41
  %52 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %53 = load i32, i32* %5, align 4
  %54 = call i32 @write(i32 1, i8* %52, i32 %53)
  br label %55

55:                                               ; preds = %51, %31
  br label %8
}

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fatal(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
